tests/negative/neg_pr116_bad_indent_step.safe
package Neg_PR116_Bad_Indent_Step

  function Broken returns Integer
     return 1
